<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblInputSalarioBruto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_salario_bruto"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtSalarioBruto"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:autofillHints="@string/hint_no_money"
                android:background="@drawable/edit_text_background_shape"
                android:hint="@string/hint_no_money"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:textColor="@color/text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblInputNumeroDependentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_num_dependentes"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtNumeroDependentes"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:autofillHints="@string/lbl_zero"
                android:background="@drawable/edit_text_background_shape"
                android:hint="@string/lbl_zero"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textColor="@color/text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblInputOutrosDescontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_outros_descontos"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtOutrosDescontos"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:autofillHints="@string/hint_no_money"
                android:background="@drawable/edit_text_background_shape"
                android:hint="@string/hint_no_money"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background_shape"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:text="@string/lbl_calcular"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="onClickCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>